# fastmcpp

./: CMakeLists.txt
examples/: streaming_demo.cpp
include/fastmcpp/: app.hpp
include/fastmcpp/client/: client.hpp  transports.hpp  types.hpp
include/fastmcpp/providers/transforms/: catalog.hpp  version_filter.hpp
include/fastmcpp/providers/transforms/search/: base.hpp  bm25.hpp  regex.hpp
include/fastmcpp/resources/: manager.hpp  template.hpp
include/fastmcpp/server/: http_server.hpp  streamable_http_server.hpp
include/fastmcpp/tools/: tool.hpp  tool_transform.hpp
include/fastmcpp/util/: http_methods.hpp  metadata.hpp  versions.hpp
src/: app.cpp
src/client/: sampling_handlers.cpp  transports.cpp
src/mcp/: handler.cpp
src/providers/transforms/: resources_as_tools.cpp  version_filter.cpp
src/resources/: template.cpp
src/server/: http_server.cpp  streamable_http_server.cpp
src/util/: json_schema.cpp
tests/app/: custom_route_forwarding.cpp  mount_query_params.cpp
tests/mcp/: handler.cpp  server_handler.cpp
tests/providers/: catalog_dedup.cpp  test_catalog_search_transforms.cpp
tests/resources/: template_query_params.cpp
tests/server/: auth_cors_security.cpp  port_zero.cpp  sse.cpp
tests/tools/: test_tool_transform.cpp
tests/util/: metadata_parsing.cpp
